[package]
name = "actionkv"
version = "0.1.0"
authors = ["shibu <shibu_st@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0"
crc       = "1.7"
serde     = "1"
serde_derive = "1.0"
bincode = "1.0"

[lib]
name    = "libactionkv"
path    = "src/lib.rs"

[[bin]]
name    = "akv_mem"
path    = "src/akv_mem.rs"